tikz-preamble: add lib shapes.symbols

--- a/manual/img/tikz-preamble.tex
+++ b/manual/img/tikz-preamble.tex
@@ -21,6 +21,7 @@
                 decorations.pathmorphing,
                 decorations.markings,
                 shapes,
+                shapes.symbols,
                 scopes,
                 backgrounds}
 
