HW Vortrag: TCB Bilder

--- a/manual/img/tikz-preamble.tex
+++ b/manual/img/tikz-preamble.tex
@@ -9,6 +9,7 @@
 
 % listings package used for verbatim environments
 \usepackage{listings}
+\usepackage{varwidth}
 \lstset{basicstyle=\ttfamily}
 
 \usetikzlibrary{shapes,
