--- a/manual/img/tikz-preamble.tex
+++ b/manual/img/tikz-preamble.tex
@@ -6,6 +6,7 @@
 
 \usepackage{tikz}
 \usepackage{ifthen}
+\usepackage{varwidth}
 
 % listings package used for verbatim environments
 \usepackage{listings}
@@ -13,6 +14,7 @@
 
 \usetikzlibrary{shapes,
                 arrows,
+                arrows.meta,
                 shadows.blur,
                 fit,
                 chains,
